TheProject/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3002
