TheProject/manifests/frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 3001
