TheProject/manifests/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: NodePort
  selector:
    app: todo-app
  
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3001
