TheProject/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-project-ingress
  namespace: project
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /todo-backend
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 1234
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend
                port:
                  number: 3456
